main/default/objects/Training_Plan_Achievement__c/fields/Main_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Main_Achievement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Achievement</label>
    <type>Checkbox</type>
</CustomField>