main/default/objects/Training_Plan_Achievement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <picklist>
        <picklistValues>
            <fullName>Plan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Section</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>